--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                     <p class="category">Set column grid, change text and color lines, add text to customize every label</p>
                                     <p class="input-group clearfix ">
                                     <label class="radio" for="">
-                                            <input type="radio" checked value="single-image" name="mode"> Single image</label>
+                                            <input type="radio" checked="checked" value="single-image" name="mode"> Single image</label>
                                         <label class="radio" for="">
                                             <input type="radio" value="grid" name="mode"> Grid
                                         </label>
